# new

./: README.md  app.py  create_admin.py  main.py  migrate.py  migrations.py  models.py  pyproject.toml  update_users_table.py  utils.py  zarinpal.py
instance/: university_food.db
static/css/: animations.css  colors.css  custom.css  light-effects.css  modern-effects.css  style.css
templates/: admin.html  admin_menu.html  admin_reports.html  admin_reservations.html  admin_student_reservations.html  admin_students.html  admin_users.html  base.html  dashboard.html  index.html  login.html  menu.html  register.html  settings.html
templates/admin/: create_warehouse_account.html  warehouse.html
templates/warehouse/: add_item.html  dashboard.html  edit_item.html  food_usage.html  forecast.html  items.html  reports.html  transactions.html  update_inventory.html
