[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.11.18",
    "email-validator==2.2.0",
    "flask-wtf==1.2.2",
    "flask==3.1.0",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==23.0.0",
    "jdatetime==5.2.0",
    "psycopg2-binary==2.9.10",
    "requests==2.32.3",
    "sqlalchemy==2.0.40",
    "flask-login==0.6.3",
    "sendgrid==6.12.0",
    "flask-migrate==4.1.0",
    "werkzeug>=3.1.3",
    "reportlab>=4.4.0",
]
